Carga de correcciones

--- a/Lucky League/ProyectoTest/Views/Home/Index.cshtml
+++ b/Lucky League/ProyectoTest/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="card bg-primary text-white mb-4">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
-                    <div>Total Productos</div>
+                    <div>Total Apuestas</div>
                     <div id="total-productos">40</div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
         <div class="card bg-warning text-white mb-4">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
-                    <div>Total Marcas</div>
+                    <div>Total Ligas</div>
                     <div id="total-marcas">30</div>
                 </div>
             </div>
