--- a/Lucky League/ProyectoTest/Views/Home/Marca.cshtml
+++ b/Lucky League/ProyectoTest/Views/Home/Marca.cshtml
@@ -5,13 +5,13 @@
 }
 
 <ol class="breadcrumb mb-4 mt-4">
-    <li class="breadcrumb-item"><a href="index.html">Mantenedores</a></li>
-    <li class="breadcrumb-item active">Marcas</li>
+    <li class="breadcrumb-item"><a href="index.html">Mantenimiento</a></li>
+    <li class="breadcrumb-item active">Ligas</li>
 </ol>
 
 <div class="card mb-4">
     <div class="card-header">
-        <i class="fas fa-table me-1"></i> Listado de Marcas
+        <i class="fas fa-table me-1"></i> Listado de Ligas
     </div>
     <div class="card-body">
         <div class="row">
