--- a/Lucky League/ProyectoTest/Views/Home/Tienda.cshtml
+++ b/Lucky League/ProyectoTest/Views/Home/Tienda.cshtml
@@ -46,7 +46,7 @@
 
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="#" style="width:180px !important">Carrito Compras</a>
+        <a class="navbar-brand ps-3" href="#" style="width:180px !important">Lucky League</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-dark text-white btn-categoria" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i> Ver Categorias</button>
 
@@ -75,8 +75,8 @@
     <header class="bg-secondary py-3">
         <div class="container my-3">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Compra con estilo </h1>
-                <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                <h1 class="display-4 fw-bolder">Lucky League </h1>
+                <p class="lead fw-normal text-white-50 mb-0">En la Liga de la Suerte, cada apuesta es un golpe de fortuna.</p>
             </div>
         </div>
     </header>
