--- a/Lucky League/ProyectoTest/Views/Home/Categoria.cshtml
+++ b/Lucky League/ProyectoTest/Views/Home/Categoria.cshtml
@@ -5,7 +5,7 @@
 }
 
 <ol class="breadcrumb mb-4 mt-4">
-    <li class="breadcrumb-item"><a href="#">Mantenedores</a></li>
+    <li class="breadcrumb-item"><a href="#">Mantenimiento</a></li>
     <li class="breadcrumb-item active">Categorias</li>
 </ol>
 
@@ -16,7 +16,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col-sm-12">
-                <button class="btn btn-success" type="button" onclick="abrirModal(null)">Crear Nuevo</button>
+                <button class="btn btn-success" type="button" onclick="abrirModal(null)">+ Crear Categoria</button>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
                 <tr>
 
                     <th>Descripcion</th>
-                    <th>Activo</th>
+                    <th>Estatus</th>
                     <th></th>
                 </tr>
             </thead>
