--- a/Lucky League/ProyectoTest/Views/Home/Producto.cshtml
+++ b/Lucky League/ProyectoTest/Views/Home/Producto.cshtml
@@ -5,13 +5,13 @@
 }
 
 <ol class="breadcrumb mb-4 mt-4">
-    <li class="breadcrumb-item"><a href="index.html">Mantenedores</a></li>
-    <li class="breadcrumb-item active">Productos</li>
+    <li class="breadcrumb-item"><a href="index.html">Mantenimiento</a></li>
+    <li class="breadcrumb-item active">Apuestas</li>
 </ol>
 
 <div class="card mb-4">
     <div class="card-header">
-        <i class="fas fa-table me-1"></i> Listado de Productos
+        <i class="fas fa-table me-1"></i> Listado de Apuestas
     </div>
     <div class="card-body">
         <div class="row">
@@ -26,7 +26,7 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Descripcion</th>
-                    <th>Marca</th>
+                    <th>Liga</th>
                     <th>Categoria</th>
                     <th>Precio</th>
                     <th>Stock</th>
