--- a/Lucky League/ProyectoTest/Views/Login/Index.cshtml
+++ b/Lucky League/ProyectoTest/Views/Login/Index.cshtml
@@ -19,16 +19,16 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Inicio de sesion</h3></div>
                                 <div class="card-body">
                                     <form action="@Url.Content("~/Login/Index")" method="post">
                                         @Html.AntiForgeryToken()
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputEmail" name="NCorreo" type="email" placeholder="name@example.com" @*value="pruebas@gmail.com"*@ value="admin@example.com" />
+                                            <input class="form-control" id="inputEmail" name="NCorreo" type="email" placeholder="name@example.com" @*value="pruebas@gmail.com"*@ />
                                             <label for="inputEmail">Correo</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputPassword" name="NContrasena" type="password" placeholder="Contraseña" @*value="12345"*@ autocomplete="off" value="admin123" />
+                                            <input class="form-control" id="inputPassword" name="NContrasena" type="password" placeholder="Contraseña" @*value="12345"*@ autocomplete="off" />
                                             <label for="inputPassword">Contraseña</label>
                                         </div>
                                         <div class="form-floating mb-3">
@@ -42,11 +42,6 @@
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <button class="btn btn-primary btn-block" type="submit">Ingresar</button>
-                                        </div>
-                                        <div class="row mt-2">
-                                            <div class="col-sm-12 text-center">
-                                                <p class="mb-0">Todos los derechos reservados ©<a id="publicidad" href="https://ouo.io/RK1tRH" target="_blank" class="ml-1"><b>Open Source - Click Aqui</b></a></p>
-                                            </div>
                                         </div>
                                     </form>
                                     
@@ -65,12 +60,7 @@
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Your Website 2021</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
-                        </div>
+                        <div class="text-muted">Copyright &copy; Lucky League 2024</div>
                     </div>
                 </div>
             </footer>
