--- a/Lucky League/ProyectoTest/Views/Shared/_Layout.cshtml
+++ b/Lucky League/ProyectoTest/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="#">Carrito Compras</a>
+        <a class="navbar-brand ps-3" href="#">LuckyLeague</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
         <ul class="navbar-nav ms-auto me-0 me-md-3 my-2 my-md-0">
@@ -31,33 +31,30 @@
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Resumen</div>
                         <a class="nav-link" href="@Url.Action("Index","Home")">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>Dashboard
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>Estadisticas
                         </a>
                         <div class="sb-sidenav-menu-heading">Gestion</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseMantenedores" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                            Mantenedores
+                            Mantenimiento
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
                         <div class="collapse" id="collapseMantenedores">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="@Url.Action("Categoria","Home")">Categorias</a>
-                                <a class="nav-link" href="@Url.Action("Marca","Home")">Marcas</a>
-                                <a class="nav-link" href="@Url.Action("Producto","Home")">Productos</a>
+                                <a class="nav-link" href="@Url.Action("Marca","Home")">Ligas</a>
+                                <a class="nav-link" href="@Url.Action("Producto","Home")">Apuestas</a>
                             </nav>
                         </div>
 
                         <a class="nav-link" href="@Url.Action("Index","Tienda")" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fas fa-store"></i></div>Ver Tienda
                         </a>
-                        <a class="nav-link" href="https://ouo.io/VRgLgZ" target="_blank">
-                            <div class="sb-nav-link-icon"><i class="fas fa-donate"></i></div>Ver Premium
-                        </a>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    Start Bootstrap
+                    Admin
                 </div>
             </nav>
         </div>
