--- a/Lucky League/ProyectoTest/Views/Tienda/Index.cshtml
+++ b/Lucky League/ProyectoTest/Views/Tienda/Index.cshtml
@@ -8,8 +8,8 @@
     <div class="bg-secondary py-3">
         <div class="container my-3">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Compra con estilo </h1>
-                <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                <h1 class="display-4 fw-bolder">Lucky league </h1>
+                <p class="lead fw-normal text-white-50 mb-0">En la Liga de la Suerte, cada apuesta es un golpe de fortuna.</p>
             </div>
         </div>
     </div>
